--- a/interaktiv.html
+++ b/interaktiv.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!------------------------------------------->
-<img src="https://drive.google.com/drive/u/1/folders/1lHOjm5MNpW6Uoch_te0z6GgWNy3ihE_L/pfad_neu.jpg" usemap="#pfad" border=0>
+<img src="pfad_neu.jpg" usemap="#pfad" border=0>
 <map name="pfad">
   <area shape="rect" coords="105,545,125,565" href="infotafel.html"  alt="Infotafel" title="Infotafel am Bahnhof Bochum-Dahlhausen">
   <area shape="circle" coords="156,494,11" href="https://drive.google.com/drive/u/1/folders/1lHOjm5MNpW6Uoch_te0z6GgWNy3ihE_L/tafel-1.html"  alt="Stollenmundloch General 2" title="Stollenmundloch General 2">
