--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link href="https://drive.google.com/drive/u/1/folders/1lHOjm5MNpW6Uoch_te0z6GgWNy3ihE_L/tisch.css" type="text/css" rel="stylesheet" media="screen"/>
+<link href="tisch.css" type="text/css" rel="stylesheet" media="screen"/>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <title>Karte interaktiv</title>
 
