--- a/tafel-1.html
+++ b/tafel-1.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link href="../tisch.css" type="text/css" rel="stylesheet" media="screen"/>
+<link href="tisch.css" type="text/css" rel="stylesheet" media="screen"/>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <title>Tafel 1</title>
 
@@ -19,8 +19,8 @@
   </p>
 <!--   Texte    -->
   <p align="justify">Der Stollen wurde so bezeichnet, weil er im Fl&ouml;z Nr. 2 (heutige Bezeichnung Fl&ouml;z Wasserfall) der Zeche General
-     angelegt wurde. Sichtbar ist infolge einer sp&auml;teren H&ouml;herlegung der Stra&szlig;e „Am Alten General“ in der St&uuml;tzmauer des zur
-     Gastst&auml;tte „Heinrichsbauer“ geh&ouml;renden Biergartens nur noch der obere Bogen des Stollenmundes. Unter dem Kanaldeckel vor
+     angelegt wurde. Sichtbar ist infolge einer sp&auml;teren H&ouml;herlegung der Stra&szlig;e â€žAm Alten Generalâ€œ in der St&uuml;tzmauer des zur
+     Gastst&auml;tte â€žHeinrichsbauerâ€œ geh&ouml;renden Biergartens nur noch der obere Bogen des Stollenmundes. Unter dem Kanaldeckel vor
      dem Mundloch f&uuml;hrt ein Schacht hinab zur Stollensohle. Der Stollen f&uuml;hrte das Wasser aus den &uuml;ber ihm liegenden Abbaubetrieben
      der umliegenden Stollenzechen (bis in den Bereich Bochum-Weitmar) ab. Das Abpumpen aus Betrieb unter der Stollensohle gelang
      erst, als zuverl&auml;ssige Dampmaschinen zur Verf&uuml;gung standen.<br>
