--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="pfad_neu.jpg" usemap="#pfad" border=0>
 <map name="pfad">
   <area shape="rect" coords="105,545,125,565" href="infotafel.html"  alt="Infotafel" title="Infotafel am Bahnhof Bochum-Dahlhausen">
-  <area shape="circle" coords="156,494,11" href="https://drive.google.com/drive/u/1/folders/1lHOjm5MNpW6Uoch_te0z6GgWNy3ihE_L/tafel-1.html"  alt="Stollenmundloch General 2" title="Stollenmundloch General 2">
+  <area shape="circle" coords="156,494,11" href="tafel-1.html"  alt="Stollenmundloch General 2" title="Stollenmundloch General 2">
   <area shape="circle" coords="127,427,11" href="tafel-2.html"  alt="Weitmarer Sattel/Zeche Glocke" title="Weitmarer Sattel/Zeche Glocke">
   <area shape="circle" coords="45,349,10" href="tafel-3.html"  alt="Erbstollenmundloch General 5" title="Erbstollenmundloch General 5">
   <area shape="circle" coords="88,295,11" href="tafel-4.html"  alt="Kleinzeche Gockel & Niebuhr" title="Kleinzeche Gockel & Niebuhr">
@@ -31,7 +31,7 @@
   <area shape="circle" coords="543,273,10" href="tafel-17.html"  alt="Maschinenhaus Tiefbauzeche Hasenwinkel" title="Maschinenhaus Tiefbauzeche Hasenwinkel">
   <area shape="circle" coords="543,302,11" href="tafel-18.html"  alt="Wetterschacht Hasenwinkel" title="Wetterschacht Hasenwinkel">
   <area shape="circle" coords="545,353,11" href="tafel-19.html"  alt="Markenkontrolle der Kokerei Hasenwinkel" title="Markenkontrolle der Kokerei Hasenwinkel">
-  <area shape="circle" coords="515,337,11" href="https://drive.google.com/drive/u/1/folders/1lHOjm5MNpW6Uoch_te0z6GgWNy3ihE_L/tafel-20.html"  alt="G&ouml;pelschacht Theresia" title="G&ouml;pelschacht Theresia">
+  <area shape="circle" coords="515,337,11" href="tafel-20.html"  alt="G&ouml;pelschacht Theresia" title="G&ouml;pelschacht Theresia">
   <area shape="circle" coords="454,366,10" href="tafel-21.html"  alt="Primus-Sprung" title="Primus-Sprung">
   <area shape="circle" coords="419,385,11" href="tafel-22.html"  alt="Erbstollen Sonnenschein" title="Erbstollen Sonnenschein">
   <area shape="circle" coords="332,425,10" href="tafel-23.html"  alt="Stollen am „Koalhoapn“" title="Stollen am „Koalhoapn“">
