--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!------------------------------------------->
-<img src="pfad_neu.jpg" usemap="#pfad" border=0>
+<img src="pfad.jpg" usemap="#pfad" border=0>
 <map name="pfad">
   <area shape="rect" coords="105,545,125,565" href="infotafel.html"  alt="Infotafel" title="Infotafel am Bahnhof Bochum-Dahlhausen">
   <area shape="circle" coords="156,494,11" href="tafel-1.html"  alt="Stollenmundloch General 2" title="Stollenmundloch General 2">
